# metabolitelearner2

./: .gitignore  AGENTS.md  LICENSE  PLAN.md  README.md  pyproject.toml
data/original_study/extractedPeaks/: tblComponentAbundance.csv  tblComponentChromatograms.csv  tblComponentEffects.csv  tblComponentLibraryMatches.csv  tblComponentSpectra.csv  tblComponents.csv  tblPeaksIntegrated.csv  tblSpectra.csv  tblTicPeaks.csv
data/original_study/folds/: peakFoldChanges.csv
data/original_study/kegg/: keggCompoundsWithFiehlibSpectrum.csv  keggCompoundsWithFiehlibSpectrum.mat
docs/: reproducibility.md  research_positioning.md
docs/reports/: previous_dataset_run.md
examples/: README.md
metabolite_learner/: __init__.py  agilent.py  cli.py  extract.py  joint_extract.py  pls.py  workflow.py
paper/: 00_abstract.md  01_introduction.md  02_methods.md  03_results.md  04_discussion.md  05_references.md  README.md  outline.md  peer_review_critique.md  peer_review_reassessment.md
paper/bibliography/: README.md
paper/figures/: joint_decomposition_logic.mmd
paper/notes/: source_paper_notes.md
plans/: README.md  paper_revision_plan.md
references/: README.md
scripts/: README.md  export_paper_figures.py  run_previous_dataset_workflow.sh  stage_previous_dataset.sh
tests/: test_cli.py  test_joint_extract.py
