[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metabolitelearner2"
version = "0.1.0"
description = "Python-first research scaffold for MetaboLiteLearner 2.0."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Joao Xavier" }
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scipy>=1.11",
  "scikit-learn>=1.4",
  "statsmodels>=0.14",
  "matplotlib>=3.8"
]

[project.scripts]
metabolitelearner2 = "metabolite_learner.cli:main"

[tool.setuptools]
packages = ["metabolite_learner"]
